remove getMovieId method in shows